[Adjustment][Van] Cleanup

--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
               <h4>Contact</h4>
               <ul class="list-unstyled">
                 <li>
-                  <a href="https://twitter.com/orbitThemes">
+                  <a href="">
                     <i class="fa fa-twitter"></i> Follow on Twitter</a
                   >
                 </li>
                 <li>
-                  <a href="https://facebook.com/orbitThemes">
+                  <a href="">
                     <i class="fa fa-facebook"></i> Like on Facebook</a
                   >
                 </li>
                 <li>
                   <a
-                    href="mailto:themesorbit@gmail.com?Subject=Hello"
+                    href="mailto:diongzonvanallen95@gmail.com?Subject=Hello"
                     target="_top"
                   >
                     <i class="fa fa-envelope"></i> Email me</a
@@ -89,11 +89,7 @@
       <div class="navbar navbar-light box-shadow">
         <div class="container d-flex justify-content-between">
           <a class="navbar-brand" href="#" id="header-logo">
-            <img
-              src="./img/adhoc-logo.png"
-              class="img-fluid"
-              alt="Orbit Themes"
-            />
+            <img src="./img/adhoc-logo.png" class="img-fluid" alt="Ad Hoc" />
           </a>
           <button
             class="navbar-toggler"
@@ -465,30 +461,30 @@
         Made with <i class="fa fa-heart"></i> By
         <a
           target="_blank"
-          title="Orbit Themes"
-          href="http://www.orbitthemes.com"
-          >Orbit Themes</a
+          title="adhoc Themes"
+          href="http://www.adhocthemes.com"
+          >adhoc Themes</a
         >
         &copy; <span id="currentYear"></span> All Rights Reserved.
       </p> -->
       <!-- <div class="social">
         <a
           traget="_blank"
-          href="https://facebook.com/orbitthemes"
+          href="https://facebook.com/adhocthemes"
           title="facebook"
         >
           <i class="fa fa-facebook"></i>
         </a>
         <a
           traget="_blank"
-          href="https://twitter.com/orbitthemes"
+          href="https://twitter.com/adhocthemes"
           title="twitter"
         >
           <i class="fa fa-twitter"></i>
         </a>
         <a
           traget="_blank"
-          href="https://plus.google.com/+orbitthemes"
+          href="https://plus.google.com/+adhocthemes"
           title="Google+"
           target="_blank"
         >
@@ -496,7 +492,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://github.com/orbitthemes"
+          href="https://github.com/adhocthemes"
           title="github"
           target="_blank"
         >
@@ -504,7 +500,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://www.behance.net/orbitthemes"
+          href="https://www.behance.net/adhocthemes"
           title="Behance"
           target="_blank"
         >
@@ -512,7 +508,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://dribbble.com/orbitthemes"
+          href="https://dribbble.com/adhocthemes"
           title="Dribbble"
           target="_blank"
         >
@@ -520,7 +516,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://www.pinterest.com/orbitThemes/"
+          href="https://www.pinterest.com/adhocThemes/"
           title="Pinterest"
           target="_blank"
         >
@@ -528,7 +524,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://www.reddit.com/user/orbitthemes"
+          href="https://www.reddit.com/user/adhocthemes"
           title="Reddit"
           target="_blank"
         >
@@ -536,7 +532,7 @@
         </a>
         <a
           traget="_blank"
-          href="https://orbitthemes.com/blog/"
+          href="https://adhocthemes.com/blog/"
           title="RSS"
           target="_blank"
         >
